# macpadpp

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: design.md  parity-audit.md  parity.md  plan.md  plugin-development.md  windows_design.md  windows_prd.md  windows_sa_sd.md  windows_srs.md
resources/i18n/: i18n.qrc  macpad_en.qm  macpad_en.ts  macpad_ja.qm  macpad_ja.ts  macpad_zh_CN.qm  macpad_zh_CN.ts  macpad_zh_TW.qm  macpad_zh_TW.ts
resources/icon/: macpad.icns  macpad.rc
resources/icons/: icons.qrc
resources/themes/: Cobalt.json  Cyberpunk.json  Dracula.json  GitHub Dark.json  GitHub Light.json  Gruvbox Dark.json  Gruvbox Light.json  Material Palenight.json  Monokai.json  Night Owl.json  Nord.json  One Dark.json  Solarized Dark.json  Solarized Light.json  Tomorrow Night.json  VS Code Dark+.json  VS Code Light.json  themes.qrc
resources/webview/: preview.html  webview.qrc
scripts/: package_macos.sh  package_windows.ps1
src/: CMakeLists.txt
src/app/: MainWindow.cpp  MainWindow.h  MainWindow_Actions.cpp  MainWindow_File.cpp  MainWindow_Menus.cpp  MainWindow_Prefs.cpp  MainWindow_Session.cpp  MainWindow_View.cpp  main.cpp
src/core/: EditorWidget.cpp  EditorWidget.h  FileEncoding.cpp  FileEncoding.h  LexerFactory.cpp  LexerFactory.h
src/extension/: ExtensionRegistry.cpp  ExtensionRegistry.h  IExtension.h
src/extension/builtin/: MarkdownPreviewExtension.cpp  MarkdownPreviewExtension.h  WordCountExtension.cpp  WordCountExtension.h
src/features/autocomplete/: ApiDatabase.cpp  ApiDatabase.h
src/features/backup/: BackupService.cpp  BackupService.h
src/features/cli/: CliArgs.cpp  CliArgs.h
src/features/clipboard/: ClipboardHistory.cpp  ClipboardHistory.h
src/features/columneditor/: ColumnEditor.cpp  ColumnEditor.h
src/features/export/: HtmlExporter.cpp  HtmlExporter.h
src/features/findall/: FindAllDock.cpp  FindAllDock.h  FindAllEngine.cpp  FindAllEngine.h
src/features/findinfiles/: FindInFilesDock.cpp  FindInFilesDock.h  FindInFilesEngine.cpp  FindInFilesEngine.h
src/features/functionlist/: FunctionListConfig.cpp  FunctionListConfig.h  FunctionListParser.cpp  FunctionListParser.h
src/features/mime/: MimeTools.cpp  MimeTools.h
src/features/run/: RunCommand.cpp  RunCommand.h  RunDock.cpp  RunDock.h
src/features/search/: FindReplaceDialog.cpp  FindReplaceDialog.h
src/features/textops/: TextOps.cpp  TextOps.h
src/features/udl/: UdlDefinition.cpp  UdlDefinition.h  UdlLexer.cpp  UdlLexer.h  UdlManager.cpp  UdlManager.h  UdlXmlIo.cpp  UdlXmlIo.h
src/persistence/: AppPaths.cpp  AppPaths.h  JsonFile.cpp  JsonFile.h  ProjectStore.cpp  ProjectStore.h  RecentFiles.cpp  RecentFiles.h  SessionStore.cpp  SessionStore.h  SettingsStore.cpp  SettingsStore.h  StyleStore.cpp  StyleStore.h  ThemeStore.cpp  ThemeStore.h
src/platform/: DesktopIntegration.cpp  DesktopIntegration.h  SingleInstance.cpp  SingleInstance.h  ThemeManager.cpp  ThemeManager.h
src/ui/: CharacterPanel.cpp  CharacterPanel.h  ColumnEditorDialog.cpp  ColumnEditorDialog.h  DocumentListDock.cpp  DocumentListDock.h  EditorPane.cpp  EditorPane.h  MacroManagerDialog.cpp  MacroManagerDialog.h  Panels.cpp  Panels.h  PreferencesDialog.cpp  PreferencesDialog.h  ProjectPanelDock.cpp  ProjectPanelDock.h  ShortcutMapperDialog.cpp  ShortcutMapperDialog.h  SnapshotRecoveryDialog.cpp  SnapshotRecoveryDialog.h  StyleConfiguratorDialog.cpp  StyleConfiguratorDialog.h  ThemePickerDialog.cpp  ThemePickerDialog.h  UdlEditorDialog.cpp  UdlEditorDialog.h  WorkspaceDock.cpp  WorkspaceDock.h
tests/: CMakeLists.txt
tests/benchmark/: bench_largefile.cpp
tests/unit/: test_apidb.cpp  test_backup.cpp  test_cliargs.cpp  test_columneditor.cpp  test_contextmenu.cpp  test_desktopintegration.cpp  test_editor.cpp  test_editor_ops.cpp  test_extension.cpp  test_fileencoding.cpp  test_findall.cpp  test_findinfiles.cpp  test_functionlistconfig.cpp  test_htmlexport.cpp  test_i18n.cpp  test_lexerfactory.cpp  test_lexerfactory_ext.cpp  test_mime.cpp  test_panels.cpp  test_persistence.cpp  test_projectstore.cpp  test_recoverydialog.cpp  test_resources.cpp  test_runcommand.cpp  test_search.cpp  test_session_snapshot.cpp  test_settings.cpp  test_singleinstance.cpp  test_stylestore.cpp  test_textops.cpp  test_thememanager.cpp  test_themestore.cpp  test_udl.cpp  test_udllexer.cpp  test_udlmanager.cpp  test_udlxmlio.cpp  test_wordcount.cpp
